# opentxs-client

./: .gitignore  CMakeLists.txt  README.md
cmake/: opentxs.pc.in  opentxsConfig.cmake.in
include/opentxs/api/: DBHandler.hpp  DBHandler.tpp  FileHandler.hpp  OTAPI.hpp  OTAPI_Exec.hpp  OTClient.hpp  OTRecord.hpp  OTRecordList.hpp  OTWallet.hpp  contacthandler.hpp
src/: CMakeLists.txt
src/api/: CMakeLists.txt  Helpers.cpp  Helpers.hpp  OTAPI.cpp  OTAPI_Exec.cpp  OTClient.cpp  OTRecord.cpp  OTRecordList.cpp  OTWallet.cpp  contacthandler.cpp
